--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,2 +1,58 @@
-<html>
-  
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <h1>Header</h1>
+    <div>
+        <section id="sec1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+            been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+            type specimen
+            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+            essentially
+            unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+            passages, and more
+            recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+            <h4 id="chicken">Chicken</h4>
+
+        </section>
+        <section id="sec2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+            been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+            type specimen
+            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+            essentially
+            unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+            passages, and more
+            recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+            <h4 id="beef">Beef</h4>
+
+        </section>
+        <section id="sec3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+            been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+            type specimen
+            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+            essentially
+            unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+            passages, and more
+            recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+            <h4 id="sushi">Sushi</h4>
+
+        </section>
+    </div>
+
+</body>
+
+</html>
